phd std and faculty changed

--- a/research-labs/index.html
+++ b/research-labs/index.html
@@ -450,7 +450,7 @@
                 </div>
             </div>
             
-            <div id="Melange" class="col-12 col-sm-6 col-md-4 itemlab mt-5 mt-md-0 px-4">
+            <!-- <div id="Melange" class="col-12 col-sm-6 col-md-4 itemlab mt-5 mt-md-0 px-4">
                 <div onclick="replace({&#39;Lab_Name&#39;: &#39;Melange Lab&#39;, &#39;Lab_Location&#39;: &#39;A-413, Research &amp; Development Block, IIITD&#39;, &#39;Lab_Email&#39;: &#39;melangelab@outlook.com&#39;, &#39;Lab_Description&#39;: &#39;We are a group of Dynamic &amp; Socially-committed Researchers working in Public Health &amp; Mobile Computing for Technology based intervention.&#39;, &#39;Lab_Website&#39;: &#39;https://melangeresearch.com/&#39;, &#39;logo&#39;: &#39;melange.svg&#39;, &#39;spacing&#39;: &#39;0&#39;})" onmouseout="this.classList.remove('shadow_'); this.classList.add('shadow');" onmouseover="this.classList.add('shadow_');this.classList.remove('shadow');" 
                 class="rounded home_main shadow w-100 bg-white h-100 p-4" style="border-width: 0.02cm; cursor: pointer;">
                     <div class="d-flex justify-content-center align-items-center" style="height: calc( 100vh / 8);" >
@@ -481,9 +481,9 @@
                         </button>
                     </div>
                 </div>
-            </div>
+            </div> -->
             
-            <div id="MIDAS" class="col-12 col-sm-6 col-md-4 itemlab mt-5 mt-md-5 px-4">
+            <div id="MIDAS" class="col-12 col-sm-6 col-md-4 itemlab mt-5 mt-md-0 px-4">
                 <div onclick="replace({&#39;Lab_Name&#39;: &#39;MIDAS Lab&#39;, &#39;Lab_Location&#39;: &#39;A-415, Research &amp; Development Block, IIITD&#39;, &#39;Lab_Email&#39;: &#39;midas@iiitd.ac.in&#39;, &#39;Lab_Description&#39;: &#39;MIDAS is a group of researchers at IIIT-Delhi who study, analyze, and build different multimedia systems for society leveraging multimodal information. MIDAS stands for Multimodal Digital Media Analysis Lab. \n MIDAS includes work on: \n · Machine Learning \n · Multimedia Content Processing \n · Natural Language Processing \n · Image Processing \n · Multimodal Computing \n · Data Science \n · Social Media Computing \n · Internet of Things&#39;, &#39;Lab_Website&#39;: &#39;http://midas.iiitd.edu.in/&#39;, &#39;logo&#39;: &#39;midas.svg&#39;, &#39;spacing&#39;: &#39;5&#39;})" onmouseout="this.classList.remove('shadow_'); this.classList.add('shadow');" onmouseover="this.classList.add('shadow_');this.classList.remove('shadow');" 
                 class="rounded home_main shadow w-100 bg-white h-100 p-4" style="border-width: 0.02cm; cursor: pointer;">
                     <div class="d-flex justify-content-center align-items-center" style="height: calc( 100vh / 8);" >
