--- a/staff/index.html
+++ b/staff/index.html
@@ -394,11 +394,11 @@
                 
                     <div class="mt-3 col-12 col-md-4 col-lg-3 rounded itemlab Jyoti_Singh " aria-label="Jyoti Singh">
                         <div class="rounded py-3 home_main border w-100 h-100" style="border-radius: 10px; border-color: #65656530 !important;">
-                            <div onmouseover="this.timer=setTimeout(()=>{this.onclick()}, 1000);" onmouseout="if(this.timer)window.clearTimeout(this.timer);" onclick="show_inner('Jyoti_Singh')" class="d-flex justify-content-center align-items-start" style="height: calc( 100vh /5 );" >
-                                <img alt="Jyoti Singh" class="staff rounded-circle" src='' data-src="https://media-exp1.licdn.com/dms/image/C5603AQHBGAdWITA4ig/profile-displayphoto-shrink_800_800/0?e=1594252800&amp;v=beta&amp;t=4pqSbMgCgI03rZILHTllvc7AMAjOIe_CtpMSVLD6ZT8" style="max-height: 100%; max-width: 100%;">
+                            <div onmouseover="this.timer=setTimeout(()=>{this.onclick()}, 1000);" onmouseout="if(this.timer)window.clearTimeout(this.timer);" onclick="show_inner('Binu Ann Joseph')" class="d-flex justify-content-center align-items-start" style="height: calc( 100vh /5 );" >
+                                <img alt="Binu Ann Joseph" class="staff rounded-circle" src='../static/images/faculty/staff1.png' data-src="../static/images/faculty/staff1.png" style="max-height: 100%; max-width: 100%;">
                             </div>
                             <div class="mt-4 row-content text-center">
-                                <h4 onmouseover="this.timer=setTimeout(()=>{this.onclick()}, 1000);" onmouseout="if(this.timer)window.clearTimeout(this.timer);" onclick="show_inner('Jyoti_Singh')" class="font-weight-bolder mt-3 text-green">Jyoti Singh</h4>
+                                <h4 onmouseover="this.timer=setTimeout(()=>{this.onclick()}, 1000);" onmouseout="if(this.timer)window.clearTimeout(this.timer);" onclick="show_inner('Jyoti_Singh')" class="font-weight-bolder mt-3 text-green">Binu Ann Joseph</h4>
                                 <h6 onmouseover="this.timer=setTimeout(()=>{this.onclick()}, 1000);" onmouseout="if(this.timer)window.clearTimeout(this.timer);" onclick="show_inner('Jyoti_Singh')" class="font-weight-bold text-green">Junior Manager (HCD)</h6>
                             </div>
                             <div class="mt-4 d-flex align-items-center justify-content-center">
