faculty social media added

--- a/faculty/index.html
+++ b/faculty/index.html
@@ -458,8 +458,10 @@
                     <div class="mt-4 d-flex justify-content-between">
                         <svg class="text-pointer text-green" onclick="hide_inner('Rajiv_Ratn')" class="ml-2 mb-2 mt-2" style="height: 20px;" aria-hidden="true" focusable="false" data-prefix="fal" data-icon="long-arrow-left" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="currentColor" d="M136.97 380.485l7.071-7.07c4.686-4.686 4.686-12.284 0-16.971L60.113 273H436c6.627 0 12-5.373 12-12v-10c0-6.627-5.373-12-12-12H60.113l83.928-83.444c4.686-4.686 4.686-12.284 0-16.971l-7.071-7.07c-4.686-4.686-12.284-4.686-16.97 0l-116.485 116c-4.686 4.686-4.686 12.284 0 16.971l116.485 116c4.686 4.686 12.284 4.686 16.97-.001z" class=""></path></svg>
                         <ul>
-                            <a rel='noopener noreferrer' target="_blank" href="https://www.iiitd.ac.in/rajivratn"><img alt="Rajiv Ratn Shah - Twitter" src="../static/images/twitter_svg.svg" height="25"></a>
-                            <a rel='noopener noreferrer' target="_blank" href="https://www.iiitd.ac.in/rajivratn"><img alt="Rajiv Ratn Shah - LinkedIn" src="../static/images/linkedin_hcd.svg" height="25"></a>
+                            <a rel='noopener noreferrer' target="_blank" href="https://twitter.com/RatnRajiv"><img alt="Rajiv Ratn Shah - Twitter" src="../static/images/twitter_svg.svg" height="25"></a>
+                            <a rel='noopener noreferrer' target="_blank" href="https://www.linkedin.com/in/rajivratn/"><img alt="Rajiv Ratn Shah - LinkedIn" src="../static/images/linkedin_hcd.svg" height="25"></a>
+                            <a rel='noopener noreferrer' target="_blank" href="https://www.facebook.com/rajivratn"><img alt="Rajiv Ratn Shah - Facebook" src="../static/images/facebook_hcd.svg" height="25"></a>
+                            <a rel='noopener noreferrer' target="_blank" href="https://www.instagram.com/rajivratn/"><img alt="Rajiv Ratn Shah - Instagram" src="../static/images/insta_svg.svg" height="25"></a>
                         </ul>
                     </div>
                 </div>
@@ -535,8 +537,9 @@
                         <div class="mt-4 d-flex justify-content-between">
                             <svg class="text-pointer text-green" onclick="hide_inner('Aman_Parnami')" class="ml-2 mb-2 mt-2" style="height: 20px;" aria-hidden="true" focusable="false" data-prefix="fal" data-icon="long-arrow-left" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="currentColor" d="M136.97 380.485l7.071-7.07c4.686-4.686 4.686-12.284 0-16.971L60.113 273H436c6.627 0 12-5.373 12-12v-10c0-6.627-5.373-12-12-12H60.113l83.928-83.444c4.686-4.686 4.686-12.284 0-16.971l-7.071-7.07c-4.686-4.686-12.284-4.686-16.97 0l-116.485 116c-4.686 4.686-4.686 12.284 0 16.971l116.485 116c4.686 4.686 12.284 4.686 16.97-.001z" class=""></path></svg>
                             <ul>
-                                <a rel='noopener noreferrer' target="_blank" href="https://www.iiitd.ac.in/aman"><img alt="Aman Parnami - Twitter" src="../static/images/twitter_svg.svg" height="25"></a>
-                                <a rel='noopener noreferrer' target="_blank" href="https://www.iiitd.ac.in/aman"><img alt="Aman Parnami - LinkedIn" src="../static/images/linkedin_hcd.svg" height="25"></a>
+                                <a rel='noopener noreferrer' target="_blank" href="https://twitter.com/amanparnami"><img alt="Aman Parnami - Twitter" src="../static/images/twitter_svg.svg" height="25"></a>
+                                <a rel='noopener noreferrer' target="_blank" href="http://www.linkedin.com/in/amanparnami"><img alt="Aman Parnami - LinkedIn" src="../static/images/linkedin_hcd.svg" height="25"></a>
+                                <a rel='noopener noreferrer' target="_blank" href="https://www.instagram.com/amanparnami/"><img alt="Aman Parnami - Instagram" src="../static/images/insta_svg.svg" height="25"></a>
                             </ul>
                         </div>
                     </div>
@@ -614,8 +617,8 @@
                         <div class="mt-4 d-flex justify-content-between">
                             <svg class="text-pointer text-green" onclick="hide_inner('Grace_Eden')" class="ml-2 mb-2 mt-2" style="height: 20px;" aria-hidden="true" focusable="false" data-prefix="fal" data-icon="long-arrow-left" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="currentColor" d="M136.97 380.485l7.071-7.07c4.686-4.686 4.686-12.284 0-16.971L60.113 273H436c6.627 0 12-5.373 12-12v-10c0-6.627-5.373-12-12-12H60.113l83.928-83.444c4.686-4.686 4.686-12.284 0-16.971l-7.071-7.07c-4.686-4.686-12.284-4.686-16.97 0l-116.485 116c-4.686 4.686-4.686 12.284 0 16.971l116.485 116c4.686 4.686 12.284 4.686 16.97-.001z" class=""></path></svg>
                             <ul>
-                                <a rel='noopener noreferrer' target="_blank" href="https://www.iiitd.ac.in/grace"><img alt="Grace Eden - Twitter" src="../static/images/twitter_svg.svg" height="25"></a>
-                                <a rel='noopener noreferrer' target="_blank" href="https://www.iiitd.ac.in/grace"><img alt="Grace Eden - LinkedIn" src="../static/images/linkedin_hcd.svg" height="25"></a>
+                                <a rel='noopener noreferrer' target="_blank" href="https://twitter.com/ged3n?lang=en"><img alt="Grace Eden - Twitter" src="../static/images/twitter_svg.svg" height="25"></a>
+                                <a rel='noopener noreferrer' target="_blank" href="https://www.linkedin.com/in/graceden/"><img alt="Grace Eden - LinkedIn" src="../static/images/linkedin_hcd.svg" height="25"></a>
                             </ul>
                         </div>
                     </div>
@@ -680,8 +683,8 @@
                         <div class="mt-4 d-flex justify-content-between">
                             <svg class="text-pointer text-green" onclick="hide_inner('Jainendra_Shukla')" class="ml-2 mb-2 mt-2" style="height: 20px;" aria-hidden="true" focusable="false" data-prefix="fal" data-icon="long-arrow-left" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="currentColor" d="M136.97 380.485l7.071-7.07c4.686-4.686 4.686-12.284 0-16.971L60.113 273H436c6.627 0 12-5.373 12-12v-10c0-6.627-5.373-12-12-12H60.113l83.928-83.444c4.686-4.686 4.686-12.284 0-16.971l-7.071-7.07c-4.686-4.686-12.284-4.686-16.97 0l-116.485 116c-4.686 4.686-4.686 12.284 0 16.971l116.485 116c4.686 4.686 12.284 4.686 16.97-.001z" class=""></path></svg>
                             <ul>
-                                <a rel='noopener noreferrer' target="_blank" href="https://www.iiitd.ac.in/jainendra"><img alt="Jainendra Shukla - Twitter" src="../static/images/twitter_svg.svg" height="25"></a>
-                                <a rel='noopener noreferrer' target="_blank" href="https://www.iiitd.ac.in/jainendra"><img alt="Jainendra Shukla - LinkedIn" src="../static/images/linkedin_hcd.svg" height="25"></a>
+                                <a rel='noopener noreferrer' target="_blank" href="https://twitter.com/ProfUvach"><img alt="Jainendra Shukla - Twitter" src="../static/images/twitter_svg.svg" height="25"></a>
+                                <a rel='noopener noreferrer' target="_blank" href="https://www.linkedin.com/in/jainendrashukla"><img alt="Jainendra Shukla - LinkedIn" src="../static/images/linkedin_hcd.svg" height="25"></a>
                             </ul>
                         </div>
                     </div>
@@ -1077,8 +1080,8 @@
                         <div class="mt-4 d-flex justify-content-between">
                             <svg class="text-pointer text-green" onclick="hide_inner('Anoop_Ratn')" class="ml-2 mb-2 mt-2" style="height: 20px;" aria-hidden="true" focusable="false" data-prefix="fal" data-icon="long-arrow-left" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="currentColor" d="M136.97 380.485l7.071-7.07c4.686-4.686 4.686-12.284 0-16.971L60.113 273H436c6.627 0 12-5.373 12-12v-10c0-6.627-5.373-12-12-12H60.113l83.928-83.444c4.686-4.686 4.686-12.284 0-16.971l-7.071-7.07c-4.686-4.686-12.284-4.686-16.97 0l-116.485 116c-4.686 4.686-4.686 12.284 0 16.971l116.485 116c4.686 4.686 12.284 4.686 16.97-.001z" class=""></path></svg>
                             <ul>
-                                <a rel='noopener noreferrer' target="_blank" href="https://www.iiitd.ac.in/people/visiting-faculty"><img alt="Anoop Ratn - Twitter" src="../static/images/twitter_svg.svg" height="25"></a>
-                                <a rel='noopener noreferrer' target="_blank" href="https://www.iiitd.ac.in/people/visiting-faculty"><img alt="Anoop Ratn - LinkedIn" src="../static/images/linkedin_hcd.svg" height="25"></a>
+                                <a rel='noopener noreferrer' target="_blank" href="https://twitter.com/toonzratn"><img alt="Anoop Ratn - Twitter" src="../static/images/twitter_svg.svg" height="25"></a>
+                                <a rel='noopener noreferrer' target="_blank" href="https://www.linkedin.com/in/anoop-ratn-9274477/"><img alt="Anoop Ratn - LinkedIn" src="../static/images/linkedin_hcd.svg" height="25"></a>
                             </ul>
                         </div>
                     </div>
@@ -1144,8 +1147,8 @@
                         <div class="mt-4 d-flex justify-content-between">
                             <svg class="text-pointer text-green" onclick="hide_inner('Indrani_De')" class="ml-2 mb-2 mt-2" style="height: 20px;" aria-hidden="true" focusable="false" data-prefix="fal" data-icon="long-arrow-left" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="currentColor" d="M136.97 380.485l7.071-7.07c4.686-4.686 4.686-12.284 0-16.971L60.113 273H436c6.627 0 12-5.373 12-12v-10c0-6.627-5.373-12-12-12H60.113l83.928-83.444c4.686-4.686 4.686-12.284 0-16.971l-7.071-7.07c-4.686-4.686-12.284-4.686-16.97 0l-116.485 116c-4.686 4.686-4.686 12.284 0 16.971l116.485 116c4.686 4.686 12.284 4.686 16.97-.001z" class=""></path></svg>
                             <ul>
-                                <a rel='noopener noreferrer' target="_blank" href="https://www.iiitd.ac.in/people/visiting-faculty"><img alt="Indrani De Parker - Twitter" src="../static/images/twitter_svg.svg" height="25"></a>
-                                <a rel='noopener noreferrer' target="_blank" href="https://www.iiitd.ac.in/people/visiting-faculty"><img alt="Indrani De Parker - LinkedIn" src="../static/images/linkedin_hcd.svg" height="25"></a>
+                                <a rel='noopener noreferrer' target="_blank" href="https://www.linkedin.com/in/indrani-de-parker-0086ba4/"><img alt="Indrani De Parker - Twitter" src="../static/images/twitter_svg.svg" height="25"></a>
+                                <a rel='noopener noreferrer' target="_blank" href="https://www.linkedin.com/in/indrani-de-parker-0086ba4/"><img alt="Indrani De Parker - LinkedIn" src="../static/images/linkedin_hcd.svg" height="25"></a>
                             </ul>
                         </div>
                     </div>
