Labs and research projects changed

--- a/faculty/index.html
+++ b/faculty/index.html
@@ -120,7 +120,7 @@
     
     <div class="container mt-2">
         <div class="d-flex align-items-center justify-content-between">
-            <a href="/"><img src="/static/images/logoleft.svg" style="height: 50px;" alt="Indraprastha Institute Of Information Technology, Delhi"><img class="ml-2" src="/static/images/logo-white.svg" style="width: 100px;" alt="Human Centered Design"></a>
+            <a href="/"><img src="/static/images/logoleft.svg" style="height: 50px;" alt="Indraprastha Institute Of Information Technology, Delhi"><img class="ml-2" src="/static/images/HCDLOGO.png" style="height:60px;" alt="Human Centered Design"></a>
             <div class="d-flex">
                 <div class="dropdown d-none d-lg-block">
                     <button class="btn text-pointer px-3 text-white font-12" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -150,7 +150,7 @@
                             Research Areas
                         </a>
                         <a class="h5 dropdown-item text-white" onmouseover="this.classList.remove('text-white');this.classList.add('text-dark');" onmouseout="this.classList.add('text-white');this.classList.remove('text-dark');" href="/research-labs/">
-                            Research Labs
+                            Labs
                         </a>
                         <a class="h5 dropdown-item text-white" onmouseover="this.classList.remove('text-white');this.classList.add('text-dark');" onmouseout="this.classList.add('text-white');this.classList.remove('text-dark');" href="/research-publications/">
                             Research Publications
@@ -1183,7 +1183,7 @@
         <div class="row">
             <div class="col-12">
                 <a href="/">
-                    <img src="/static/images/logo-white.svg" style="width: 100px;" alt="Human Centered Design">
+                    <img src="/static/images/HCDLOGO.png" style="height:60px;" alt="Human Centered Design">
                 </a>
                 <hr class="text-white bg-white">
             </div>
