--- a/index.html
+++ b/index.html
@@ -559,7 +559,7 @@
 
 <div style="height: 5px;" class="mt-5 container hcd-gradient"></div>
 
-<div class="container px-4 px-md-0 mt-4 py-5" style="border-top-width: 5px !important;">
+<!-- <div class="container px-4 px-md-0 mt-4 py-5" style="border-top-width: 5px !important;">
     <div class="row">
         <div class="col-12 d-sm-flex align-items-center justify-content-between px-0 px-md-5">
             <h3 class="text-green">
@@ -602,7 +602,7 @@
             </ul>
         </div>
     </div>
-</div>
+</div> -->
 
 
         <div id="footer" class="bg-black" style="clear: both;"> 
